--- a/styles/style.css
+++ b/styles/style.css
@@ -13,19 +13,334 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  display: flex;
+  background-color:  #f2f2f2;
+  position: relative;
+  margin-bottom: 100px;
   /* выше установили ограничения для секции */
+}
+
+.header-title {
+  width: 730px;
+  margin: auto auto auto 64px;
+  z-index: 2;
+  font-size: 102px;
+  line-height: 96px;
+  font-weight: 700;
+}
+
+.header-subtitle {
+  width: 388px;
+  position: absolute;
+  left: 65px;
+  bottom: 30px;
+  z-index: 2;
+  font-size: 18px;
+  line-height: 25px;
+  font-style: normal;
+  font-weight: 500;
+}
+
+.header-subtitle_text {
+  font-size: 18px;
+  line-height: 25px;
+  font-style: normal;
+  font-weight: 500;
+}
+
+.header-link {
+  text-decoration: none;
+}
+
+.logo {
+  height: 32px;
+  width: 228px;
+}
+
+.logo_place_header {
+  position: absolute;
+  top: 30px;
+  left: 64px;
+  z-index: 2;
+}
+
+.header-main-illustration {
+  width: 756px;
+  height: 608px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   height: 568px;
   width: 568px;
+  position: absolute;
+  top: 64px;
+  right: 0;
+  background-color:  #2f80ed;
+  z-index: 0;
 }
 
-/* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
-  width: 200px;
+.description {
+  display: flex;
+  margin-bottom: 100px;
+}
+
+.two-columns {
+  width: 80%;
+  margin: 0 auto 0 auto;
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.two-columns_brief {
+  width: 175px;
+  margin: 0 0 0 0;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: 500;
+  color: #2f80ed;
+}
+
+.two-columns_main-text {
+  width: 80%;
+  min-width: 784px;
+}
+
+.two-columns_paragraph {
+  margin: 0;
+}
+
+.two-columns_paragraph_centre {
+  margin: 30px 0 30px 0;
+}
+
+.two-columns_paragraph, .two-columns_paragraph_centre {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.paragraph_span {
+  font-weight: 700;
+}
+
+.digits {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 100px;
+}
+
+.section-title {
+  width: 60%;
+  margin: 0 auto 0 auto;
+  display: block;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.section-subtitle {
+  width: 60%;
+  margin: 20px auto 0 auto;
+  display: block;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: 500;
+  text-align: center;
+}
+
+.table {
+  margin: 0 auto 0 auto;
+  width: 1100px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.cell {
+  width: 250px;
+  padding-top: 60px;
+}
+
+.cell_heading {
+  margin: 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 700;
+  z-index: 1;
+  position: relative;
+}
+
+.cell_text {
+  margin: 20px 0 20px 0;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: 500;
+  z-index: 1;
+  position: relative;
+}
+
+.no-botton-margin {
+  margin-bottom: 0;
+}
+
+.feynman {
+  height: 890px;
+  background-color: #f2f2f2;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.feynman-title {
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 700;
+  z-index: 1;
+  display: block;
+  margin: 100px auto 70px auto;
+  width: 648px;
+  text-align: center;
+}
+
+.feynman-subtitle {
+  display: block;
+  margin: 0 auto 0 auto;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: 500;
+  z-index: 1;
+}
+
+.feynman-link {
+  position: absolute;
+  right: 48px;
+  top: 50%;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: 500;
+  text-decoration: none;
+  z-index: 1;
+  color: #2f80ed;
+}
+
+.feynman-img {
+  width: 867px;
+  height: 637px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+.kaufman {
+  display: flex;
+  flex-direction: column;
+  background-color: #1f1f1f;
+  padding-bottom: 90px;
+  position: relative;
+  overflow: hidden;
+}
+
+.section-title_theme_dark {
   color: white;
-  margin-right: 0;
-  margin-top: 80px;
+  margin-top: 90px;
+  position: relative;
+  z-index: 1;
+}
+
+.section-subtitle_theme_dark {
+  color: white;
+  position: relative;
+  z-index: 1;
+}
+
+.cell_theme_dark {
+  width: 200px;
+}
+
+.cell_heading_theme_dark {
+  color: white;
+}
+
+.cell_text_theme_dark {
+  color: white;
+}
+
+.triangle {
+  position: absolute;
+  top: 0;
+  right: -210px;
+  width: 877px;
+  height: 877px;
+  z-index: 0;
+}
+
+.footer {
+  display: flex;
+  min-height: 350px;
+  background-color: #1f1f1f;
+}
+
+.footer-columns {
+  display: flex;
+  position: relative;
+  width: 90%;
+  margin: 60px auto 40px auto;
+}
+
+.footer-column_content_copyright {
+  flex-basis: 711px;
+
+}
+
+.footer-author {
+  position: absolute;
+  left: 0;
+  bottom: 18px;
+  color: white;
+  margin: 18px 0 0 0;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.footer-column-heading {
+  margin: 0 0 20px 0;
+  color: white;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.footer-column_content_info {
+  position: absolute;
+  right: 25%;
+}
+
+.footer-column-links {
+  display: block;
+  margin: 0 0 16px ;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 500;
+  color: white;
+  text-decoration: none;
+}
+
+.footer-social-icon {
+  width: 16px;
+  height: 16px;
+  margin: 0 10px 0 0;
+}
+
+.footer-column_content_social {
+  position: absolute;
+  right: 0;
 }
