--- a/styles/style.css
+++ b/styles/style.css
@@ -21,10 +21,10 @@
 }
 
 .header__title {
+  margin: 0 0 0 64px;
   width: 730px;
   display: flex;
   align-items: center;
-  margin-left: 64px;
   z-index: 2;
   font-size: 102px;
   line-height: 96px;
@@ -32,9 +32,11 @@
 }
 
 .header__subtitle {
+  margin: 0;
+  padding: 0;
   width: 388px;
   position: absolute;
-  left: 65px;
+  left: 64px;
   bottom: 30px;
   z-index: 2;
   font-size: 18px;
@@ -61,7 +63,7 @@
 }
 
 .header__main-illustration {
-  width: 756px;
+  width: 765px;
   height: 608px;
   position: absolute;
   right: 0;
@@ -111,7 +113,7 @@
 .two-columns__paragraph {
   line-height: 34px;
   font-size: 24px;
-  font-weight: 500;
+  font-weight: 400;
   margin-bottom: 30px;
   margin-top: 0;
 }
@@ -130,7 +132,7 @@
   margin-bottom: 100px;
 }
 
-.section__title {
+.section-title {
   width: 60%;
   margin: 0 auto 0 auto;
   display: block;
@@ -140,7 +142,7 @@
   text-align: center;
 }
 
-.section__subtitle {
+.section-subtitle {
   width: 60%;
   margin: 20px auto 0 auto;
   line-height: 34px;
@@ -167,7 +169,7 @@
   margin: 0;
   line-height: 1.15;
   font-size: 24px;
-  font-weight: 400;
+  font-weight: 700;
   z-index: 1;
   position: relative;
 }
@@ -236,14 +238,14 @@
   overflow: hidden;
 }
 
-.section__title_theme_dark {
+.section-title_theme_dark {
   color: white;
   margin-top: 90px;
   position: relative;
   z-index: 1;
 }
 
-.section__subtitle_theme_dark {
+.section-subtitle_theme_dark {
   color: white;
   position: relative;
   z-index: 1;
@@ -295,8 +297,6 @@
 }
 
 .footer__author {
-  left: 0;
-  bottom: 18px;
   color: white;
   margin: 18px 0 18px 0;
   line-height: 25px;
@@ -317,7 +317,7 @@
   list-style-type: none;
   text-align: left;
   padding: 0;
-  margin: 0;
+  margin: 0 0 16px 0;
 }
 
 .footer__column-link {
