--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,5 @@
 @import url(../vendor/normalize.css);
+@import url(../blocks/rotation/rotation.css);
 @import url(../blocks/description/description.css);
 @import url(../blocks/digits/digits.css);
 @import url(../blocks/feynman/feynman.css);
